Fixed whitespace.

--- a/daeken.com/static/style.css
+++ b/daeken.com/static/style.css
@@ -79,5 +79,5 @@ blockquote {
 }
 
 .post-body {
-	margin-bottom: 2em;
+	margin-bottom: 1em;
 }
